--- a/seohui/ClickCounter/ClickCounter/User Interface/Base.lproj/Main.storyboard
+++ b/seohui/ClickCounter/ClickCounter/User Interface/Base.lproj/Main.storyboard
@@ -195,6 +195,9 @@
                                 <state key="normal" title="Save">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="saveCount:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ex9-sD-e7S"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -220,6 +223,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="666.66666666666674" y="45.535714285714285"/>
         </scene>
     </scenes>
 </document>
