[ClickCounter] list delete

--- a/seohui/ClickCounter/ClickCounter/User Interface/Base.lproj/Main.storyboard
+++ b/seohui/ClickCounter/ClickCounter/User Interface/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vuF-L7-wxx">
                                         <rect key="frame" x="30" y="0.0" width="105" height="60"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <state key="normal" title="👉 Back">
+                                        <state key="normal" title="👈 Back">
                                             <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                         </state>
                                         <connections>
@@ -223,7 +223,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="666.66666666666674" y="45.535714285714285"/>
+            <point key="canvasLocation" x="561" y="46"/>
         </scene>
     </scenes>
 </document>
